add validation google

--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dames 3D</title>
+    <meta name="google-site-verification" content="nwVPqsKRGvHVh9v-Qn4QoawQzNbN99Sfg6usOSlUEhg" />
+    <title>Dames 3D — Jeu de dames en 3D jouable contre l'IA</title>
+    <meta name="description" content="Dames 3D — un jeu de dames en 3D construit avec Three.js et React. Jouez contre une IA configurable, captures multiples, promotions et interface 3D interactive." />
+    <meta name="keywords" content="dames, jeu de dames, checkers, three.js, react, jeu 3d, intelligence artificielle, IA" />
+    <meta name="author" content="Guillaume Sere" />
+    <link rel="canonical" href="https://dames-3d.vercel.app/" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Dames 3D — Jeu de dames en 3D" />
+    <meta property="og:description" content="Jouez aux dames en 3D contre une IA. Réaliste, simple et amusant — construit avec Three.js + React." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dames-3d.vercel.app/" />
+    <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Dames 3D — Jeu de dames en 3D" />
+    <meta name="twitter:description" content="Jouez aux dames en 3D contre une IA. Réaliste, simple et amusant — construit avec Three.js + React." />
+    <meta name="twitter:image" content="/og-image.png" />
+
+    <!-- SEO / Robots -->
+    <meta name="robots" content="index,follow" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
