--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-adsense-account" content="ca-pub-1886827333053468">
     <meta name="google-site-verification" content="nwVPqsKRGvHVh9v-Qn4QoawQzNbN99Sfg6usOSlUEhg" />
     <title>Dames 3D — Jeu de dames en 3D jouable contre l'IA</title>
     <meta name="description" content="Dames 3D — un jeu de dames en 3D construit avec Three.js et React. Jouez contre une IA configurable, captures multiples, promotions et interface 3D interactive." />
@@ -27,6 +28,8 @@
     <meta name="robots" content="index,follow" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="alternate icon" href="/favicon.ico" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1886827333053468"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
